grammar.js
    source_code: ($) => repeat(choice($._statement, $.class_statement, $._definition, $.do_block, $.interface_statement, $.method_statement, $.constant)),

    
    body: ($) => seq(":", repeat(choice($._statement, $._definition, $.do_block, prec(-1, $.annotation)))),

    label: ($) => seq($.identifier, ":"),

    _terminator: ($) => /\s*\./,

    _block_terminator: ($) =>
      seq(
        kw("END"),
        optional(
          choice(
            kw("FUNCTION"),
            kw("PROCEDURE"),
            kw("CASE"),
            kw("CLASS"),
            kw("ENUM"),
            kw("INTERFACE"),
            kw("CONSTRUCTOR"),
            kw("DESTRUCTOR"),
            kw("CATCH"),
            kw("FINALLY")
          )
        ),
        "."
      ),

    // OPERATORS

    assignment_operator: ($) => choice("=", $._augmented_assignment),

    _comparison_operator: ($) =>
      choice(
        "<",
        "<=",
        "<>",
        "=",
        ">",
        ">=",
        kw("LT"),
        kw("LE"),
        kw("NE"),
        kw("EQ"),
        kw("GT"),
        kw("GE"),
        kw("BEGINS"),
        kw("MATCHES"),
        kw("CONTAINS")
      ),

    // LITERALS / KEYWORDS

    _name: ($) => choice($.identifier, $.qualified_name),

    _integer_literal: ($) => /[0-9]+/,

    _decimal_literal: ($) =>
      seq($._integer_literal, alias($._namedot, "."), $._integer_literal),

    number_literal: ($) => choice($._integer_literal, $._decimal_literal),

    string_literal: ($) => seq($._escaped_string, optional(seq(":", $.string_literal_attribute))),

    array_literal: ($) =>
      seq(
        "[",
        optional($._array_literal_body),
        "]"
      ),

    _array_literal_body: ($) =>
      choice(
        $.range_notation,
        _list($._array_literal_member, ",")
      ),

    identifier: ($) => /[A-Z|a-z|\-|\\_]{1}[#+&A-Z|a-z|\-|\\_|0-9]*/i,

    // variable_name: ($) => choice(
    //   $.identifier,
    //   seq($.identifier, "&")
    // ),

    qualified_name: ($) =>
      seq(
        $.identifier,
        repeat1(seq(alias($._namedot, "."), choice($.identifier, "*")))
      ),

    // TUNING

    query_tuning: ($) =>
      choice(
        kw("NO-LOCK"),
        kw("SHARE-LOCK"),
        kw("EXCLUSIVE-LOCK"),
        kw("NO-WAIT"),
        kw("NO-ERROR"),
        kw("NO-PREFETCH"),
        seq(kw("USE-INDEX"), $.identifier),
        $.using
      ),

    array_access: ($) =>
      prec.right(
        1,
        seq(
          field("array", choice($.identifier, $.qualified_name, $.object_access)),
          $.array_literal,
        )
      ),

    object_access: ($) =>
      prec(2, seq(
        field(
          "object",
          choice($.new_expression, $.function_call, $.constant, $._name)
        ),
        repeat1(seq(alias($._namecolon, ":"), field("property", $.identifier)))
      )),

    where_clause: ($) => seq(kw("WHERE"), field("condition", $._expression)),

    function_call: ($) =>
      prec.right(
        1,
        seq(
          field(
            "function",
            choice($.identifier, prec.right(2, $.object_access))
          ),
          alias($.function_arguments, $.arguments),
          optional(kw("NO-ERROR"))
        )
      ),

    _on_phrase: ($) =>
      choice(
        $.on_error_phrase,
        $.on_quit_phrase,
        $.on_stop_phrase,
        $.on_endkey_phrase
      ),

    on_error_phrase: ($) =>
      seq(
        kw("ON"),
        kw("ERROR"),
        kw("UNDO"),
        optional(field("label", $.identifier)),
        ",",
        choice(
          $.action_phrase,
          kw("THROW")
        )
      ),

    on_stop_phrase: ($) =>
      seq(
        kw("ON"),
        kw("STOP"),
        kw("UNDO"),
        optional(field("label", $.identifier)),
        ",",
        $.action_phrase
      ),

    on_quit_phrase: ($) =>
      seq(
        kw("ON"),
        kw("QUIT"),
        optional(seq(kw("UNDO"), optional($.identifier))),
        ",",
        $.action_phrase
      ),

    stop_after_phrase: ($) => seq(kw("STOP-AFTER"), $._integer_literal),

    do_for_phrase: ($) =>
      seq(
        kw("FOR"),
        _list($._name, ",")
      ),

      _for_phrase: ($) =>
        seq(
          optional(field("type", choice(kw("EACH"), kw("FIRST"), kw("LAST")))),
          field("table", $._name),
          repeat(
            choice(
              $.of,
              $.query_tuning,
              $.where_clause,
              $.sort_clause
            )
          )
        ),

    _frame: ($) => seq(kw("FRAME"), field("frame", choice($.identifier, $.constant))),

    _definition: ($) =>
      choice(
        $.variable_definition,
        $.buffer_definition,
        $.browse_definition,
        // $.button_definition,
        $.query_definition,
        $.rectangle_definition,
        $.temp_table_definition,
        $.workfile_definition,
        $.property_definition,
        $.data_source_definition,
        $.event_definition,
        $.dataset_definition,
        $.stream_definition,
        // $.image_definition,
        $.frame_definition,
        $.parameter_definition
      ),

    variable_assignment: ($) => seq($.assignment, $._terminator),

    assignment: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          prec.left(
            field(
              "name",
              choice(
                $.identifier,
                $.qualified_name,
                $.object_access,
                $.member_access,
                $.function_call,
                $.array_access,
                $.in_frame_phrase
              )
            )
          ),
          $.assignment_operator,
          prec.right(choice($._expression, $.include)),
          optional($.when_expression),
          optional(seq(kw("IN"), $._frame))
        )
      ),

    repeat_statement: ($) =>
      seq(
        optional($.label),
        kw("REPEAT"),
        repeat($._repeat_phrase),
        optional($.preselect_phrase),
        optional($.while_phrase),
        optional($._on_phrase),
        $.body,
        $._block_terminator
      ),

    _repeat_phrase: ($) =>
      choice(
        $.to_phrase,
        $.repeat_tuning
        // $.frame_phrase
      ),

    for_statement: ($) =>
      seq(
        optional($.label),
        alias($._for_keyword, "FOR"),
        _list($._for_phrase, ","),
        repeat(choice($._on_phrase, $.frame_phrase, $.while_phrase)),
        $.body,
        $._block_terminator
      ),

    abl_statement: ($) =>
      seq(
        field("statement", $.identifier),
        repeat(prec(-1, $._expression)),
        $._terminator
      ),

    undo_statement: ($) =>
      seq(
        kw("UNDO"),
        optional(field("label", $.identifier)),
        ",",
        choice(
          $.action_phrase,
          seq(kw("THROW"), choice($.new_expression, $.identifier))
        ),
        $._terminator
      ),

    error_scope_statement: ($) =>
      seq(
        choice(kw("ROUTINE-LEVEL"), kw("BLOCK-LEVEL")),
        $.on_error_phrase,
        $._terminator
      ),

    do_block: ($) =>
      seq(
        optional($.label),
        kw("DO"),
        repeat($._do_tuning),
        optional($._on_phrase),
        optional($.frame_phrase),
        $.body,
        $._block_terminator
      ),

    _do_tuning: ($) =>
      choice(
        $.do_for_phrase,
        $.preselect_phrase,
        $.to_phrase,
        $.while_phrase,
        $.stop_after_phrase,
        kw("TRANSACTION")
      ),

    comparison_expression: ($) =>
      prec.right(
        PREC.COMPARE,
        seq($._expression, $._comparison_operator, $._expression)
      ),

    new_expression: ($) =>
      prec.right(
        seq(
          choice(alias($._new_keyword, "NEW"), kw("DYNAMIC-NEW")),
          $._name,
          alias($.function_arguments, $.arguments),
          optional(kw("NO-ERROR"))
        )
      ),

    _expression: ($) =>
      choice(
        $.parenthesized_expression,
        $.unary_expression,
        $.null_expression,
        $._binary_expression,
        $.ternary_expression,
        $.available_expression,
        $.accumulate_expression,
        $.ambiguous_expression,
        $.temp_table_expression,
        $.current_changed_expression,
        $.locked_expression,
        $.dataset_expression,
        $.input_expression,
        $.can_find_expression,
        $.new_expression,

        $.boolean_literal,
        $.string_literal,
        $.date_literal,
        $.number_literal,
        $.array_literal,

        $.object_access,
        $.member_access,
        $.array_access,
        $.function_call,
        $.in_frame_phrase,

        $._name,
        $.constant
      ),

    _statement: ($) =>
      choice(
        $.var_statement,
        $.message_statement,
        $.null_statement,
        $.procedure_statement,
        $.function_statement,
        $.function_call_statement,
        $.return_statement,
        $.if_statement,
        $.for_statement,
        $.repeat_statement,
        $.find_statement,
        $.case_statement,
        $.input_output_statement,
        $.assign_statement,
        $.catch_statement,
        $.finally_statement,
        $.accumulate_statement,
        $.undo_statement,
        $.error_scope_statement,
        $.using_statement,
        $.on_statement,
        $.prompt_for_statement,
        $.release_statement,
        $.run_statement,
        $.enum_statement,
        $.abl_statement,

        $.variable_assignment,
        $.preprocessor_directive,
        $.include,
        $.annotation //TODO: Check should it be in supertype
      )
  }
});

function _list(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

function kw(keyword) {
  if (keyword.toUpperCase() != keyword) {
    throw new Error(`Expected upper case keyword got ${keyword}`);
  }

  return alias(reserved(createCaseInsensitiveRegex(keyword)), keyword);
}

function reserved(regex) {
  return token(prec(1, new RegExp(regex)));
}

function createCaseInsensitiveRegex(word) {
  return new RegExp(
    word
      .split("")
      .map((letter) => `[${letter.toLowerCase()}${letter.toUpperCase()}]`)
      .join("")
  );
}
