test/corpus/basic.txt
================================================================================
Qualified name
================================================================================

DISPLAY table.field1.
DISPLAY
  database
    .table
    .field2.

--------------------------------------------------------------------------------

(source_code
  (abl_statement
    statement: (identifier)
    (qualified_name
      (identifier)
      (identifier)))
  (abl_statement
    statement: (identifier)
    (qualified_name
      (identifier)
      (identifier)
      (identifier))))

================================================================================
OBJECT ACCESSORS statement
================================================================================

DISPLAY some_object:root.
DISPLAY some_object:chained_property:chained_another:method().

PUT some_object:array[5].

Object:Length = new OpenEdge.Core.String(pcMessage):Size.
oObject:Length -= String(pcMessage):Size.

--------------------------------------------------------------------------------

(source_code
  (abl_statement
    statement: (identifier)
    (object_access
      object: (identifier)
      property: (identifier)))
  (abl_statement
    statement: (identifier)
    (function_call
      function: (object_access
        object: (identifier)
        property: (identifier)
        property: (identifier)
        property: (identifier))
      (arguments)))
  (abl_statement
    statement: (identifier)
    (array_access
      array: (object_access
        object: (identifier)
        property: (identifier))
      (array_literal
        (number_literal))))
  (variable_assignment
    (assignment
      name: (object_access
        object: (identifier)
        property: (identifier))
      (assignment_operator)
      (object_access
        object: (new_expression
          (qualified_name
            (identifier)
            (identifier)
            (identifier))
          (arguments
            (argument
              (identifier))))
        property: (identifier))))
  (variable_assignment
    (assignment
      name: (object_access
        object: (identifier)
        property: (identifier))
      (assignment_operator)
      (object_access
        object: (function_call
          function: (identifier)
          (arguments
            (argument
              (identifier))))
        property: (identifier)))))

================================================================================
DO block
================================================================================

DO ON ERROR UNDO, THROW:
  UNDO, THROW NEW Progress.Lang.AppError("Rethrow me :)").
END.

DO ON QUIT UNDO, RETURN ERROR:
  QUIT.
END.

labeled:
DO ON STOP UNDO label1, LEAVE label2:
  STOP.
END.

DO FOR some_copy TRANSACTION STOP-AFTER 2 ON ERROR UNDO, THROW:
  a = 5.
END.

--------------------------------------------------------------------------------

(source_code
  (do_block
    (on_error_phrase)
    (body
      (undo_statement
        (new_expression
          (qualified_name
            (identifier)
            (identifier)
            (identifier))
          (arguments
            (argument
              (string_literal)))))))
  (do_block
    (on_quit_phrase
    (on_phrase_action))
    (body
      (abl_statement
        (identifier))))
  (do_block
    (label
      (identifier))
    (on_stop_phrase
      (identifier)
      (on_phrase_action
        (identifier)))
    (body
      (abl_statement
        (identifier))))
  (do_block
    (do_for_phrase
      (identifier))
    (stop_after_phrase
      (number_literal))
    (on_error_phrase)
    (body
      (variable_assignment
        (assignment
          (identifier)
          (assignment_operator)
          (number_literal))))))

================================================================================
ON ERROR/QUIT/STOP phrases
================================================================================

ROUTINE-LEVEL ON ERROR UNDO, THROW.
BLOCK-LEVEL ON ERROR UNDO, THROW.

REPEAT ON ERROR UNDO, THROW:
  UNDO, LEAVE.
END.

FOR EACH tb_mstr WHERE tb_field = 1 NO-LOCK ON QUIT, NEXT:
  QUIT.
END.

--------------------------------------------------------------------------------

(source_code
  (error_scope_statement
    (on_error_phrase))
  (error_scope_statement
    (on_error_phrase))
  (repeat_statement
    (on_error_phrase)
    (body
      (undo_statement)))
  (for_statement
    (identifier)
    (where_clause
      (comparison_expression
        (identifier)
        (number_literal)))
    (query_tuning)
    (on_quit_phrase
      (on_phrase_action))
    (body
      (abl_statement
        (identifier)))))

================================================================================
QUIRKS
================================================================================

nonAlphaChars = "~"!@#$%^&*()-_=+[]{}\|;:'~",<.>/?~~".

DISPLAY Order.CustNum Order.OrderDate Andsomething AndBug.

--------------------------------------------------------------------------------

(source_code
  (variable_assignment
    (assignment
      (identifier)
      (assignment_operator)
      (string_literal)))
  (abl_statement
    (identifier)
    (qualified_name
      (identifier)
      (identifier))
    (qualified_name
      (identifier)
      (identifier))
    (identifier)
    (identifier)))
